--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
 .backgroundBanner {
     width: 100%;   
     height: 550px;
-    object-fit: cover; /* cortar imagem */
+    object-fit: cover; /* cut image */
     
 }
 
@@ -49,6 +49,7 @@
     position: relative;    
 }
 
+/* topnav */
 .marginMenu{
     margin-top: 38px;
 }
@@ -56,30 +57,35 @@
 .blackFBanner {
     margin: 0;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    top: 30%;
+    left: 30%;
+    /* -ms-transform: translate(-10%, -50%); */
+    transform: translate(-50%, 0%);
     width: 35%;
 }
 
+/* remove 'white border' */
+html, body {
+    margin: 0;
+    padding: 0;
+  } 
+
 /* banner pink color: #c62447 */
 
-/* form section */
-.subscribeBar{
-    background-color: #333;
-    overflow: hidden;
-    height: 38px;
-}
+/* Form section */
 
-.subscribeBar span{
-    color: #ffffffd8;
-    padding: 13px 20px;
-    font-size: 12px;
-    font-family:'Raleway';  
-    font-weight: bold; 
-}
+.squareBanner {
+    margin: 0;
+    position: absolute;    
+    top: 30%;
+    left: 30%;    
+    transform: translate(125%, -28%);   
 
-.subscribeBar form{
-    
-}
+    height: 500px;
+    width: 350px;
+    background-color: #000;   
+    opacity: 0.3;
+    border-color: #c62447;
+    border-style: solid;
+    border-width: 2px;
+  }
