--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,10 @@ html, body {
 
 .squareBanner {
     margin: 0;
-    position: fixed;    
+    position:absolute;    
     top: 30%;
     left: 30%;    
-    transform: translate(125%, -28%);   
+    transform: translate(400px, -138px);   
 
     height: 500px;
     width: 350px;
